--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
             </div>
         </div>
     </div>
+    <section class=""
     <section id="logo-branding" class="l-section">
         <div class="l-container">
             <div class="l-row">
@@ -425,11 +426,23 @@
                     </div>
                 </div>
                 <div class="col">
-                    <p>Body — Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                    <p class="p-body large">Body — Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                         ut labore et dolore magna aliqua. Aenean vel elit scelerisque mauris pellentesque pulvinar
                         pellentesque. Habitasse platea dictumst quisque sagittis purus sit amet volutpat consequat. </p>
                     <div class="sg-label">
-                        <p>Paragraph — Inter 400 — 16/24 PT — 0.5px</p>
+                        <p>Large Paragraph — Inter 400 — 16/24 PT — 0.5px</p>
+                    </div>
+                    <p class="p-body">Body — Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                        ut labore et dolore magna aliqua. Aenean vel elit scelerisque mauris pellentesque pulvinar
+                        pellentesque. Habitasse platea dictumst quisque sagittis purus sit amet volutpat consequat. </p>
+                    <div class="sg-label">
+                        <p>Large Paragraph — Inter 400 — 16/24 PT — 0.5px</p>
+                    </div>
+                    <p class="p-body small">Body — Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                        ut labore et dolore magna aliqua. Aenean vel elit scelerisque mauris pellentesque pulvinar
+                        pellentesque. Habitasse platea dictumst quisque sagittis purus sit amet volutpat consequat. </p>
+                    <div class="sg-label">
+                        <p>Large Paragraph — Inter 400 — 16/24 PT — 0.5px</p>
                     </div>
                     <p class="label large">Label large</p>
                     <div class="sg-label">
