changed toast alerts

--- a/index.html
+++ b/index.html
@@ -214,9 +214,19 @@
                         <h3>Logo & Branding</h3>
                     </div>
                     <div class="spacer _24"></div>
-                    <p class="c-alert info">Logos & Branding use embedded SVG code and customized H2 headers to
+                    <div class="c-toasts info">
+                        <div class="icon-small">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M12 16V12M12 8H12.01M22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12Z"
+                                    stroke="#152dff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                            </svg>
+                        </div>
+                        Logos & Branding use embedded SVG code and customized H2 headers to
                         optimize rendering and editing. Copy and paste SVG code or change hex codes and font sizes in
-                        the appropriate embed to change brands or logos.</p>
+                        the appropriate embed to change brands or logos.
+                    </div>
                 </div>
             </div>
             <div class="l-row">
@@ -422,7 +432,17 @@
                         <h3>Typography</h3>
                     </div>
                     <div class="spacer _24"></div>
-                    <p class="c-alert info">All headers and body elements are formatted for Material Design 3. </p>
+                    <div class="c-toasts info">
+                        <div class="icon-small">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M12 16V12M12 8H12.01M22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12Z"
+                                    stroke="#152dff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                            </svg>
+                        </div>
+                        All headers and body elements are formatted for Material Design 3. Colors have been chosen to reflect accessibility standards for the visually impaired.
+                    </div>
                 </div>
             </div>
             <div class="l-row">
@@ -514,8 +534,17 @@
                         <h3>Color Palette</h3>
                     </div>
                     <div class="spacer _24"></div>
-                    <p class="c-alert info">Color palette follows Material Design 3 accessibility standards and
-                        best practices. Click hex codes to copy to clipboard.</p>
+                    <div class="c-toasts info">
+                        <div class="icon-small">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M12 16V12M12 8H12.01M22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12Z"
+                                    stroke="#152dff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                            </svg>
+                        </div>
+                        Color palette follows Material Design 3 accessibility standards and best practices. Click on hex codes to copy hex to clipboard.
+                    </div>
                 </div>
             </div>
             <div class="l-row">
@@ -781,9 +810,17 @@
                         <h3>Buttons</h3>
                     </div>
                     <div class="spacer _24"></div>
-                    <p class="c-alert error">Note: please review custom CSS when editing buttons. Each button with
-                        a hover state or interaction uses custom CSS. Note: Icon buttons use embedded SVG code for image
-                        rendering. SVG code documentation can be found in the icons section.</p>
+                    <div class="c-toasts error">
+                        <div class="icon-small">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M15 9L9 15M9 9L15 15M22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12Z"
+                                    stroke="#d6002b" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                            </svg>
+                        </div>
+                        Note: review custom CSS when editing buttons. Each button with a hover state or interaction uses custom CSS. Note: Icon buttons use embedded SVG code for image rendering. SVG code documentation can be found in the icons section.
+                    </div>
                 </div>
             </div>
             <div class="l-row">
@@ -950,8 +987,17 @@
                         <h3>Icons</h3>
                     </div>
                     <div class="spacer _24"></div>
-                    <p class="c-alert info">Icons use embedded SVG code to optimize rendering and ease of editing.
-                        Copy and paste SVG code or change hex codes in the appropriate embed to change an icon. </p>
+                    <div class="c-toasts info">
+                        <div class="icon-small">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M12 16V12M12 8H12.01M22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12Z"
+                                    stroke="#152dff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                            </svg>
+                        </div>
+                        Icons use embedded SVG code to optimize rendering and ease of editing. Copy and paste SVG code or change hex codes in the appropriate embed to change an icon. 
+                    </div>
                 </div>
             </div>
             <div class="l-row">
@@ -2332,9 +2378,19 @@
                         <h3>Grids</h3>
                     </div>
                     <div class="spacer _24"></div>
-                    <p class="c-alert error">Note: Columns need to be nested within an "l-row" and a direct child
+                    <div class="c-toasts error">
+                        <div class="icon-small">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M15 9L9 15M9 9L15 15M22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12Z"
+                                    stroke="#d6002b" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                            </svg>
+                        </div>
+                        Note: Columns need to be nested within an "l-row" and a direct child
                         of an "l-container". All columns start off at equal widths by defining the class of "col" and
-                        auto-collapse at the mobile portrait breakpoint if no responsive classes are defined.</p>
+                        auto-collapse at the mobile portrait breakpoint if no responsive classes are defined.
+                    </div>
                 </div>
             </div>
             <div class="l-row">
