--- a/index.html
+++ b/index.html
@@ -186,10 +186,10 @@
                     <div class="spacer _36"></div>
                     <div class="links-wrapper">
                         <a href="https://github.com/dylanharriscameron/Crystal-Logic-Labs-Design-System"
-                            class="text-link onDark small" rel="noopener noreferrer" target="_blank">Git Repository</a>
-                        <a href="https://resumakr.com" class="text-link onDark small" rel="noopener noreferrer"
+                            class="text-link small" rel="noopener noreferrer" target="_blank">Git Repository</a>
+                        <a href="https://resumakr.com" class="text-link small" rel="noopener noreferrer"
                             target="_blank">Resumakr</a>
-                        <a href="https://dylancameron.com" class="text-link onDark small" rel="noopener noreferrer"
+                        <a href="https://dylancameron.com" class="text-link small" rel="noopener noreferrer"
                             target="_blank">Other projects</a>
                     </div>
                     <p class="p-body small">©2023 Crystal Logic Labs, design by Dylan Cameron</p>
@@ -783,14 +783,14 @@
                     </div>
                     <div class="sg-label">
                         <p>Success</p>
-                        <p class="text-link small" id="sample">#4DC477</p>
+                        <p class="text-link small">#4DC477</p>
                     </div>
                     <div class="color-block">
                         <div class="cc-alert-color success-light"></div>
                     </div>
                     <div class="sg-label">
                         <p>Success Light</p>
-                        <button class="text-link small" onclick="copyToClipboard()">#F6FCF8</button>
+                        <p class="text-link small">#F6FCF8</p>
                     </div>
                 </div>
             </div>
