--- a/index.html
+++ b/index.html
@@ -1168,6 +1168,94 @@
                     </div>
                 </div>
             </div>
+            <div class="l-row">
+                <div class="col">
+                    <h5>Quaternary Buttons</h5>
+                </div>
+            </div>
+            <div class="l-row">
+                <div class="col">
+                    <div class="btn-quaternary">
+                        <div class="btn-icon-wrapper">
+                            <svg class="btn-icon-1" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M4 18L9 12M20 18L15 12M3 8L10.225 12.8166C10.8665 13.2443 11.1872 13.4582 11.5339 13.5412C11.8403 13.6147 12.1597 13.6147 12.4661 13.5412C12.8128 13.4582 13.1335 13.2443 13.775 12.8166L21 8M6.2 19H17.8C18.9201 19 19.4802 19 19.908 18.782C20.2843 18.5903 20.5903 18.2843 20.782 17.908C21 17.4802 21 16.9201 21 15.8V8.2C21 7.0799 21 6.51984 20.782 6.09202C20.5903 5.71569 20.2843 5.40973 19.908 5.21799C19.4802 5 18.9201 5 17.8 5H6.2C5.0799 5 4.51984 5 4.09202 5.21799C3.71569 5.40973 3.40973 5.71569 3.21799 6.09202C3 6.51984 3 7.07989 3 8.2V15.8C3 16.9201 3 17.4802 3.21799 17.908C3.40973 18.2843 3.71569 18.5903 4.09202 18.782C4.51984 19 5.07989 19 6.2 19Z" stroke="#152dff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                            <svg class="btn-icon-2" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M4 18L9 12M20 18L15 12M3 8L10.225 12.8166C10.8665 13.2443 11.1872 13.4582 11.5339 13.5412C11.8403 13.6147 12.1597 13.6147 12.4661 13.5412C12.8128 13.4582 13.1335 13.2443 13.775 12.8166L21 8M6.2 19H17.8C18.9201 19 19.4802 19 19.908 18.782C20.2843 18.5903 20.5903 18.2843 20.782 17.908C21 17.4802 21 16.9201 21 15.8V8.2C21 7.0799 21 6.51984 20.782 6.09202C20.5903 5.71569 20.2843 5.40973 19.908 5.21799C19.4802 5 18.9201 5 17.8 5H6.2C5.0799 5 4.51984 5 4.09202 5.21799C3.71569 5.40973 3.40973 5.71569 3.21799 6.09202C3 6.51984 3 7.07989 3 8.2V15.8C3 16.9201 3 17.4802 3.21799 17.908C3.40973 18.2843 3.71569 18.5903 4.09202 18.782C4.51984 19 5.07989 19 6.2 19Z" stroke="#152dff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                        </div>
+                        <div class="btn-text-wrapper">
+                            <p class="btn-text-7">Large</p>
+                        </div>
+                    </div>
+                    <div class="sg-label">
+                        <p class="label small">Button with hover State</p>
+                        <a href="#" class="text-link small">CSS</a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="btn-quaternary pressed">
+                        <div class="btn-icon-wrapper">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M4 18L9 12M20 18L15 12M3 8L10.225 12.8166C10.8665 13.2443 11.1872 13.4582 11.5339 13.5412C11.8403 13.6147 12.1597 13.6147 12.4661 13.5412C12.8128 13.4582 13.1335 13.2443 13.775 12.8166L21 8M6.2 19H17.8C18.9201 19 19.4802 19 19.908 18.782C20.2843 18.5903 20.5903 18.2843 20.782 17.908C21 17.4802 21 16.9201 21 15.8V8.2C21 7.0799 21 6.51984 20.782 6.09202C20.5903 5.71569 20.2843 5.40973 19.908 5.21799C19.4802 5 18.9201 5 17.8 5H6.2C5.0799 5 4.51984 5 4.09202 5.21799C3.71569 5.40973 3.40973 5.71569 3.21799 6.09202C3 6.51984 3 7.07989 3 8.2V15.8C3 16.9201 3 17.4802 3.21799 17.908C3.40973 18.2843 3.71569 18.5903 4.09202 18.782C4.51984 19 5.07989 19 6.2 19Z" stroke="#152dff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>    
+                        </div>
+                        <div class="btn-text-wrapper">
+                            <p class="btn-text-7">Pressed</p>
+                        </div>
+                    </div>
+                    <div class="sg-label">
+                        <p class="label small">pressed button State</p>
+                        <a href="#" class="text-link small">CSS</a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="btn-quaternary disabled">
+                        <div class="btn-text-wrapper">
+                            <p class="btn-text-7 disabled">Disabled</p>
+                        </div>
+                    </div>
+                    <div class="sg-label">
+                        <p class="label small">disabled button State</p>
+                        <a href="#" class="text-link small">CSS</a>
+                    </div>
+                </div>
+            </div>
+            <div class="l-row">
+                <div class="col">
+                    <div class="btn-quaternary small">
+                        <div class="btn-text-wrapper">
+                            <p class="btn-text-7 small">Small</p>
+                        </div>
+                    </div>
+                    <div class="sg-label">
+                        <p class="label small">Small button with hover State</p>
+                        <a href="#" class="text-link small">CSS</a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="btn-quaternary pressed small">
+                        <div class="btn-text-wrapper">
+                            <p class="btn-text-7 small">Pressed</p>
+                        </div>
+                    </div>
+                    <div class="sg-label">
+                        <p class="label small">Small pressed button State</p>
+                        <a href="#" class="text-link small">CSS</a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="btn-quaternary disabled small">
+                        <div class="btn-text-wrapper">
+                            <p class="btn-text-7 disabled small">Disabled</p>
+                        </div>
+                    </div>
+                    <div class="sg-label">
+                        <p class="label small">Small disabled button State</p>
+                        <a href="#" class="text-link small">CSS</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <div class="divider"></div>
@@ -2348,6 +2436,86 @@
             <div class="l-row">
                 <div class="col">
                     <h5>Cards</h5>
+                </div>
+            </div>
+            <div class="l-row">
+                <div class="col">
+                    <div class="c-card-wrapper">
+                        <div class="card-contents">
+                            <div class="card-main">
+                                <div class="c-avatar-wrapper">
+                                    <svg class="c-avatar" width="49" height="48" viewBox="0 0 49 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M18.5 23L9.5 20L6.5 12M18.5 25L8.5 28L7.5 34M18.5 26L12.5 33L16.5 42M18.5 22L12.5 14L14.9 6M30.5 23L39.5 20L42.5 12M30.5 25L40.5 28L41.5 34M30.5 26L36.5 33L32.5 42M30.5 22L36.5 14L34.1 6M30.5 28C30.5 31.3137 27.8137 34 24.5 34C21.1863 34 18.5 31.3137 18.5 28C18.5 26.6667 18.9349 25.435 19.6706 24.4389C20.1075 23.8474 20.3259 23.5517 20.4012 23.4034C20.4941 23.2208 20.5061 23.1888 20.5566 22.9902C20.5976 22.8291 20.615 22.6206 20.6498 22.2036L21.151 16.1938C21.2593 14.8936 21.3135 14.2435 21.5874 13.9815C21.8247 13.7545 22.1583 13.6585 22.48 13.7247C22.8512 13.801 23.2426 14.3229 24.0255 15.3667L24.5005 16L24.9755 15.3667C25.7583 14.3229 26.1497 13.801 26.5209 13.7247C26.8426 13.6585 27.1763 13.7545 27.4136 13.9815C27.6874 14.2435 27.7416 14.8936 27.85 16.1938L28.3504 22.2033C28.3851 22.6204 28.4025 22.829 28.4434 22.9901C28.4939 23.1888 28.506 23.2207 28.5988 23.4034C28.6742 23.5517 28.8926 23.8475 29.3296 24.4391C30.0652 25.4351 30.5 26.6668 30.5 28Z" stroke="#151515" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>       
+                                </div>
+                                <div class="spacer _12"></div>
+                                <h6>Card title</h6>
+                                <div class="p-body small">Card description here</div>
+                            </div>
+                            <div class="spacer _24"></div>
+                            <div class="icon-wrapper">
+                                <svg class="card-icon-1" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M16.2426 7.75734L7.75734 16.2426M16.2426 7.75734H9.17156M16.2426 7.75734V14.8284" stroke="#151515" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>    
+                                <svg class="card-icon-2" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M12.7076 18.3639L11.2933 19.7781C9.34072 21.7308 6.1749 21.7308 4.22228 19.7781C2.26966 17.8255 2.26966 14.6597 4.22228 12.7071L5.63649 11.2929M18.3644 12.7071L19.7786 11.2929C21.7312 9.34024 21.7312 6.17441 19.7786 4.22179C17.826 2.26917 14.6602 2.26917 12.7076 4.22179L11.2933 5.636M8.50045 15.4999L15.5005 8.49994" stroke="#FFFFFF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>    
+                            </div>
+                        </div>
+                        <div class="card-background"></div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="c-card-wrapper">
+                        <div class="card-contents">
+                            <div class="card-main">
+                                <div class="c-avatar-wrapper">
+                                    <svg class="c-avatar" width="49" height="48" viewBox="0 0 49 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M4.5 24C5.13131 24.5524 5.44697 24.8286 5.74657 25.1066C9.97876 29.0337 12.8935 34.1731 14.0917 39.8209C14.1765 40.2207 14.2515 40.6334 14.4016 41.4587L14.5 42M4.5 24C5.13129 23.4477 5.44694 23.1715 5.74653 22.8935C9.97875 18.9664 12.8935 13.827 14.0917 8.17914C14.1765 7.77934 14.2515 7.36668 14.4016 6.54137L14.5 6M4.5 24H44.5M14.5 6C20.9194 8.56779 28.0806 8.56779 34.5 6M14.5 6L34.5 42M34.5 6L34.5984 6.54129C34.7485 7.36669 34.8235 7.7794 34.9084 8.17925C36.1065 13.827 39.0212 18.9663 43.2533 22.8933C43.553 23.1714 43.8686 23.4476 44.5 24M34.5 6L14.5 42M44.5 24C43.8687 24.5524 43.553 24.8286 43.2534 25.1066C39.0212 29.0337 36.1065 34.1731 34.9083 39.8209C34.8235 40.2207 34.7485 40.6334 34.5984 41.4587L34.5 42M34.5 42C28.0806 39.4323 20.9194 39.4323 14.5 42M14.5 24C16.6455 26.5785 18.3044 29.5255 19.3959 32.6974L19.5 33C22.8006 32.3398 26.1994 32.3398 29.5 33L29.6041 32.6974C30.6956 29.5255 32.3545 26.5785 34.5 24C32.3545 21.4215 30.6956 18.4745 29.6041 15.3026L29.5 15C26.1994 15.6601 22.8006 15.6601 19.5 15L19.3959 15.3026C18.3044 18.4745 16.6455 21.4215 14.5 24Z" stroke="#151515" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>   
+                                </div>
+                                <div class="spacer _12"></div>
+                                <h6>Card title</h6>
+                                <div class="p-body small">Card description here</div>
+                            </div>
+                            <div class="spacer _24"></div>
+                            <div class="icon-wrapper">
+                                <svg class="card-icon-1" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M16.2426 7.75734L7.75734 16.2426M16.2426 7.75734H9.17156M16.2426 7.75734V14.8284" stroke="#151515" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>    
+                                <svg class="card-icon-2" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M12.7076 18.3639L11.2933 19.7781C9.34072 21.7308 6.1749 21.7308 4.22228 19.7781C2.26966 17.8255 2.26966 14.6597 4.22228 12.7071L5.63649 11.2929M18.3644 12.7071L19.7786 11.2929C21.7312 9.34024 21.7312 6.17441 19.7786 4.22179C17.826 2.26917 14.6602 2.26917 12.7076 4.22179L11.2933 5.636M8.50045 15.4999L15.5005 8.49994" stroke="#FFFFFF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>    
+                            </div>
+                        </div>
+                        <div class="card-background"></div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="c-card-wrapper">
+                        <div class="card-contents">
+                            <div class="card-main">
+                                <div class="c-avatar-wrapper">
+                                    <svg class="c-avatar" width="49" height="48" viewBox="0 0 49 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M24.4984 18.9059L19.4238 13.8313C20.3297 13.0081 20.9 11.8205 20.9 10.5C20.9 8.01472 18.8853 6 16.4 6C13.9147 6 11.9 8.01472 11.9 10.5C11.9 10.849 11.9397 11.1887 12.0149 11.5149C11.6887 11.4397 11.349 11.4 11 11.4C8.51472 11.4 6.5 13.4147 6.5 15.9C6.5 18.3853 8.51472 20.4 11 20.4C12.3205 20.4 13.5065 19.8313 14.3297 18.9254L19.4043 24M29.5926 24L34.6687 29.0746C35.4919 28.1687 36.6795 27.6 38 27.6C40.4853 27.6 42.5 29.6147 42.5 32.1C42.5 34.5853 40.4853 36.6 38 36.6C37.651 36.6 37.3113 36.5603 36.9851 36.4851C37.0603 36.8113 37.1 37.151 37.1 37.5C37.1 39.9853 35.0853 42 32.6 42C30.1147 42 28.1 39.9853 28.1 37.5C28.1 36.1795 28.6687 34.9919 29.5746 34.1687L24.5082 29.0844M29.573 13.8313L14.3297 29.0746C13.5065 28.1688 12.3205 27.6 11 27.6C8.51472 27.6 6.5 29.6147 6.5 32.1C6.5 34.5853 8.51472 36.6 11 36.6C11.349 36.6 11.6887 36.5603 12.0149 36.4851C11.9397 36.8113 11.9 37.151 11.9 37.5C11.9 39.9853 13.9147 42 16.4 42C18.8853 42 20.9 39.9853 20.9 37.5C20.9 36.1795 20.3297 34.9919 19.4238 34.1688L34.6672 18.9254C35.4904 19.8313 36.6795 20.4 38 20.4C40.4853 20.4 42.5 18.3853 42.5 15.9C42.5 13.4147 40.4853 11.4 38 11.4C37.651 11.4 37.3113 11.4397 36.9851 11.5149C37.0603 11.1887 37.1 10.849 37.1 10.5C37.1 8.01472 35.0853 6 32.6 6C30.1147 6 28.1 8.01472 28.1 10.5C28.1 11.8205 28.6672 13.0081 29.573 13.8313Z" stroke="#151515" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>      
+                                </div>
+                                <div class="spacer _12"></div>
+                                <h6>Card title</h6>
+                                <div class="p-body small">Card description here</div>
+                            </div>
+                            <div class="spacer _24"></div>
+                            <div class="icon-wrapper">
+                                <svg class="card-icon-1" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M16.2426 7.75734L7.75734 16.2426M16.2426 7.75734H9.17156M16.2426 7.75734V14.8284" stroke="#151515" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>    
+                                <svg class="card-icon-2" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M12.7076 18.3639L11.2933 19.7781C9.34072 21.7308 6.1749 21.7308 4.22228 19.7781C2.26966 17.8255 2.26966 14.6597 4.22228 12.7071L5.63649 11.2929M18.3644 12.7071L19.7786 11.2929C21.7312 9.34024 21.7312 6.17441 19.7786 4.22179C17.826 2.26917 14.6602 2.26917 12.7076 4.22179L11.2933 5.636M8.50045 15.4999L15.5005 8.49994" stroke="#FFFFFF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>    
+                            </div>
+                        </div>
+                        <div class="card-background"></div>
+                    </div>
                 </div>
             </div>
             <div class="l-row">
