added prism css and js

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Crystal Logic Labs</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="prism.css">
 </head>
 
 <body>
@@ -3339,4 +3340,5 @@
 
 
     <script src="script.js"></script>
+    <script src="prism.js"></script>
 </body>
