added fill to svg logo for dark-mode

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="c-sidebar-wrapper">
         <div class="c-brand-wrapper padded">
             <div class="c-brand_content">
-                <svg class="nav-icon" width="48" height="49" viewBox="0 0 48 49" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg class="nav-icon fill" width="48" height="49" viewBox="0 0 48 49" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M41.289 6.91344L17.4037 0.498535L0 18.0265L6.36956 41.9684L30.1419 48.498L48 30.9707L41.289 6.91344ZM47.3907 30.7232L38.4015 34.3723L41.127 8.26933L47.3907 30.7232ZM40.7201 7.50456L37.97 33.9316L24.9197 12.1594L40.7201 7.50456ZM6.74841 41.3683L0.778399 18.9283L17.9422 35.2483L6.74841 41.3683ZM24.1484 11.828L1.13565 17.6223L17.4364 1.20518L24.1484 11.828ZM24.6756 11.6874L18.0583 1.21461L40.1159 7.13864L24.6756 11.6874ZM29.3739 47.5797L7.27676 41.6738L18.3289 35.6313L29.3739 47.5797ZM46.6682 31.5339L30.6211 46.8917L38.2562 34.9722L46.6682 31.5339ZM29.902 47.3988L18.9739 35.5575L37.6602 35.0332L29.902 47.3988ZM18.7205 35.0393L24.6078 12.8311L37.6453 34.5107L18.7205 35.0393Z" fill="#151515"/>
                 </svg>   
             </div>
@@ -272,7 +272,7 @@
                 <div class="col">
                     <div class="c-brand-wrapper">
                         <div class="c-brand_content">
-                            <svg class="nav-icon" width="48" height="49" viewBox="0 0 48 49" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <svg class="nav-icon fill" width="48" height="49" viewBox="0 0 48 49" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M41.289 6.91344L17.4037 0.498535L0 18.0265L6.36956 41.9684L30.1419 48.498L48 30.9707L41.289 6.91344ZM47.3907 30.7232L38.4015 34.3723L41.127 8.26933L47.3907 30.7232ZM40.7201 7.50456L37.97 33.9316L24.9197 12.1594L40.7201 7.50456ZM6.74841 41.3683L0.778399 18.9283L17.9422 35.2483L6.74841 41.3683ZM24.1484 11.828L1.13565 17.6223L17.4364 1.20518L24.1484 11.828ZM24.6756 11.6874L18.0583 1.21461L40.1159 7.13864L24.6756 11.6874ZM29.3739 47.5797L7.27676 41.6738L18.3289 35.6313L29.3739 47.5797ZM46.6682 31.5339L30.6211 46.8917L38.2562 34.9722L46.6682 31.5339ZM29.902 47.3988L18.9739 35.5575L37.6602 35.0332L29.902 47.3988ZM18.7205 35.0393L24.6078 12.8311L37.6453 34.5107L18.7205 35.0393Z" fill="#151515"/>
                             </svg>                                 
                             <h2 class="c-brand-text small">Crystal<br>Logic<br>Labs</h2>
@@ -286,7 +286,7 @@
                 <div class="col col-3">
                     <div class="c-brand-wrapper">
                         <div class="c-logo small">
-                            <svg class="nav-icon" width="48" height="49" viewBox="0 0 48 49" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <svg class="nav-icon fill" width="48" height="49" viewBox="0 0 48 49" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M41.289 6.91344L17.4037 0.498535L0 18.0265L6.36956 41.9684L30.1419 48.498L48 30.9707L41.289 6.91344ZM47.3907 30.7232L38.4015 34.3723L41.127 8.26933L47.3907 30.7232ZM40.7201 7.50456L37.97 33.9316L24.9197 12.1594L40.7201 7.50456ZM6.74841 41.3683L0.778399 18.9283L17.9422 35.2483L6.74841 41.3683ZM24.1484 11.828L1.13565 17.6223L17.4364 1.20518L24.1484 11.828ZM24.6756 11.6874L18.0583 1.21461L40.1159 7.13864L24.6756 11.6874ZM29.3739 47.5797L7.27676 41.6738L18.3289 35.6313L29.3739 47.5797ZM46.6682 31.5339L30.6211 46.8917L38.2562 34.9722L46.6682 31.5339ZM29.902 47.3988L18.9739 35.5575L37.6602 35.0332L29.902 47.3988ZM18.7205 35.0393L24.6078 12.8311L37.6453 34.5107L18.7205 35.0393Z" fill="#151515"/>
                             </svg>     
                         </div>
@@ -308,7 +308,7 @@
                 <div class="col">
                     <div class="c-brand-wrapper">
                         <div class="c-brand_content">
-                            <svg class="nav-icon" width="97" height="97" viewBox="0 0 97 97" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <svg class="nav-icon fill" width="97" height="97" viewBox="0 0 97 97" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M83.077 13.3286L35.3064 0.498779L0.499023 35.5547L13.2381 83.4385L60.7829 96.4978L96.499 61.443L83.077 13.3286ZM95.2804 60.9481L77.302 68.2463L82.7529 16.0404L95.2804 60.9481ZM81.9392 14.5108L76.439 67.365L50.3385 23.8206L81.9392 14.5108ZM13.9958 82.2384L2.05582 37.3583L36.3834 69.9983L13.9958 82.2384ZM48.7958 23.1578L2.77032 34.7463L35.3717 1.91207L48.7958 23.1578ZM49.8502 22.8766L36.6156 1.93094L80.7308 13.779L49.8502 22.8766ZM59.2468 94.6612L15.0525 82.8494L37.1567 70.7642L59.2468 94.6612ZM93.8355 62.5695L61.7412 93.2851L77.0113 69.446L93.8355 62.5695ZM60.303 94.2992L38.4468 70.6167L75.8195 69.5681L60.303 94.2992ZM37.94 69.5804L49.7147 25.1639L75.7897 68.5232L37.94 69.5804Z" fill="#151515"/>
                             </svg>
                             <h2 class="c-brand-text medium">Crystal<br>Logic<br>Labs</h2>
@@ -322,7 +322,7 @@
                 <div class="col col-3">
                     <div class="c-brand-wrapper">
                         <div class="c-logo medium">
-                            <svg class="nav-icon" width="97" height="97" viewBox="0 0 97 97" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <svg class="nav-icon fill" width="97" height="97" viewBox="0 0 97 97" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M83.077 13.3286L35.3064 0.498779L0.499023 35.5547L13.2381 83.4385L60.7829 96.4978L96.499 61.443L83.077 13.3286ZM95.2804 60.9481L77.302 68.2463L82.7529 16.0404L95.2804 60.9481ZM81.9392 14.5108L76.439 67.365L50.3385 23.8206L81.9392 14.5108ZM13.9958 82.2384L2.05582 37.3583L36.3834 69.9983L13.9958 82.2384ZM48.7958 23.1578L2.77032 34.7463L35.3717 1.91207L48.7958 23.1578ZM49.8502 22.8766L36.6156 1.93094L80.7308 13.779L49.8502 22.8766ZM59.2468 94.6612L15.0525 82.8494L37.1567 70.7642L59.2468 94.6612ZM93.8355 62.5695L61.7412 93.2851L77.0113 69.446L93.8355 62.5695ZM60.303 94.2992L38.4468 70.6167L75.8195 69.5681L60.303 94.2992ZM37.94 69.5804L49.7147 25.1639L75.7897 68.5232L37.94 69.5804Z" fill="#151515"/>
                             </svg>
                         </div>
@@ -344,7 +344,7 @@
                 <div class="col">
                     <div class="c-brand-wrapper">
                         <div class="c-brand_content">
-                            <svg class="nav-icon" width="145" height="145" viewBox="0 0 145 145" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <svg class="nav-icon fill" width="145" height="145" viewBox="0 0 145 145" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M124.726 19.3781L52.5729 0L0 52.9484L19.2411 125.272L91.0525 144.997L144.998 92.05L124.726 19.3781ZM143.157 91.3024L116.003 102.326L124.236 23.474L143.157 91.3024ZM123.007 21.1638L114.699 100.994L75.2773 35.2252L123.007 21.1638ZM20.3855 123.459L2.35138 55.6724L54.1996 104.972L20.3855 123.459ZM72.9473 34.224L3.43056 51.7273L52.6716 2.13463L72.9473 34.224ZM74.5398 33.7994L54.5504 2.16313L121.182 20.0584L74.5398 33.7994ZM88.7325 142.223L21.9816 124.382L55.3677 106.129L88.7325 142.223ZM140.975 93.7514L92.4999 140.144L115.564 104.138L140.975 93.7514ZM90.3277 141.676L57.3162 105.906L113.764 104.322L90.3277 141.676ZM56.5508 104.341L74.3352 37.2541L113.719 102.744L56.5508 104.341Z" fill="#151515"/>
                             </svg>         
                             <h2 class="c-brand-text large">Crystal<br>Logic<br>Labs</h2>
@@ -358,7 +358,7 @@
                 <div class="col col-3">
                     <div class="c-brand-wrapper">
                         <div class="c-logo large">
-                            <svg class="nav-icon" width="145" height="145" viewBox="0 0 145 145" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <svg class="nav-icon fill" width="145" height="145" viewBox="0 0 145 145" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M124.726 19.3781L52.5729 0L0 52.9484L19.2411 125.272L91.0525 144.997L144.998 92.05L124.726 19.3781ZM143.157 91.3024L116.003 102.326L124.236 23.474L143.157 91.3024ZM123.007 21.1638L114.699 100.994L75.2773 35.2252L123.007 21.1638ZM20.3855 123.459L2.35138 55.6724L54.1996 104.972L20.3855 123.459ZM72.9473 34.224L3.43056 51.7273L52.6716 2.13463L72.9473 34.224ZM74.5398 33.7994L54.5504 2.16313L121.182 20.0584L74.5398 33.7994ZM88.7325 142.223L21.9816 124.382L55.3677 106.129L88.7325 142.223ZM140.975 93.7514L92.4999 140.144L115.564 104.138L140.975 93.7514ZM90.3277 141.676L57.3162 105.906L113.764 104.322L90.3277 141.676ZM56.5508 104.341L74.3352 37.2541L113.719 102.744L56.5508 104.341Z" fill="#151515"/>
                             </svg>          
                         </div>
